developer's google doc

--- a/index.html
+++ b/index.html
@@ -175,4 +175,8 @@
 <script src="js/jquery.csv-0.71.js"></script>
 <script src="js/Comparator.js"></script>
 </body>
+<footer>
+    <br>
+    <a href="https://docs.google.com/document/d/1PO-q6RXqJqhp8SrDRcN2pC_KLAmEdDroAascT88VGgY/edit?usp=sharing">Developer's use only</a>
+</footer>
 </html>
