play/pause button added

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     </div>
 
     <div >
-        <video id="video" height="540" width="720" preload="auto" class="_ox1" data-video-width="720" data-video-height="540"
+        <video  controls autoplay class="video" height="540" width="720" preload="auto" class="_ox1" data-video-width="720" data-video-height="540"
                src="https://fbcdn-video-e-a.akamaihd.net/hvideo-ak-xap1/v/t42.1790-2/1049616_610046755704873_1497961528_n.mp4?efg=eyJybHIiOjcxMSwicmxhIjoyNzY4fQ%3D%3D&amp;rl=711&amp;vabr=395&amp;oh=f5fa6752acc8063c8dd24fc425b010ed&amp;oe=5601437F&amp;__gda__=1442927747_8671751c151bbc95ce773cb94d6c66a6" aria-owns="js_4" aria-haspopup="true" tabindex="0"><noscript data-reactid=".t"></noscript>
         </video>
     </div>
