ng hide canceled

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
 
 
-<div id="compare" ng-hide="SameDevice">
+<div id="compare" >
 
     <table  class="table table-bordered table-responsive">
         <tbody>
