--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en" ng-app="SpCompareApp">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Smart Compare - tbk & ys</title>
 
     <!-- Latest compiled and minified CSS -->
