changed a little bit the mobile view

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" ng-app="SpCompareApp">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0 , user-scalable=yes">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0 , user-scalable=no">
 
     <title>Smart Compare - tbk & ys</title>
 
@@ -115,10 +115,10 @@
         <h3>What are the most important features for you?</h3>
         <br>
         <span ng-repeat="p in Priorities">
-            <label class="btn btn-primary"  >
+            <label class="btn btn-primary "  >
                 <input type="checkbox" ng-model="p[1]">
                 {{p[0]}}</label>
-            </span>
+        </span>
     </div>
     <div id="drop_downs">
         <select class="select1" ng-model="first_selected_Item" ng-change="setChoice(0)" ng-options="x.Name for x in DevicesToShow">
@@ -139,8 +139,8 @@
 
 <div id="compare" ng-hide="SameDevice()">
 
-    <table  class="w3-table table-bordered table-responsive">
-        <tbody>
+    <table  class="table table-bordered table-responsive w3-medium ">
+        <tbody class="text-center">
         <tr>
             <th class="headers" ng-if="CompareModels()"> <br> Specs </th>
             <td class="names"  ng-repeat="x in devices"  ng-if="x.chosen[0] || x.chosen[1]">
@@ -212,9 +212,9 @@
             </td>
         <tr/>
         <tr >
-            <td class="winner" colspan="3">
+            <td class="winner " colspan="3">
 
-            <span ng-repeat="x in devices"  ng-if="(x.chosen[0] || x.chosen[1]) && x.winner" >
+            <span class="w3-xlarge" ng-repeat="x in devices"  ng-if="(x.chosen[0] || x.chosen[1]) && x.winner" >
                 <img  class="recommendation_logo" ng-src="images/scr.png" >
                 <strong>{{ x.Name }}</strong>
                 <img class="winner_img" ng-src="{{x.image}}" alt="winner">
