--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand">Smart Compare</a>
+                <a class="navbar-brand" style="color: black">Smart Compare</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a href="#home" class="shadow" onclick="return ChangeVisibility('home','compare','selection','filter')">Home</a></li>
+                    <li><a href="#home" class="shadow" style="color: black" onclick="return ChangeVisibility('home','compare','selection','filter')">Home</a></li>
 
-                    <li><a href="#compare" class="shadow" onclick="return ChangeVisibility('filter','home','compare','selection')">Compare Phones</a></li>
+                    <li><a href="#compare" class="shadow" style="color: black" onclick="return ChangeVisibility('filter','home','compare','selection')">Compare Phones</a></li>
                 </ul>
             </div><!--/.nav-collapse -->
         </div>
@@ -59,7 +59,7 @@
         <!-- Wrapper for slides -->
         <div class="carousel-inner" role="listbox" data-interval="10000">
             <div class="item active" >
-                <img src="images\sc1.jpg" alt="Intro1" width="1350" height="600">
+                <img src="images\sc1.jpg" alt="Intro1" >
             </div>
 
             <div class="item">
