--- a/index.html
+++ b/index.html
@@ -14,28 +14,30 @@
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="style/bootstrap-table.min.css">
     <link rel="stylesheet" href="style/style.css">
-    <link rel="stylesheet" a href="style/bootstrap-select.min.css">
+    <link rel="stylesheet" href="style/bootstrap-select.min.css">
     <link rel="stylesheet" href="style/w3.css">
+    <link rel="stylesheet" href="style/select.css">
 
 </head>
 <body ng-controller="SpCompareController" >
 <header>
-    <nav class="navbar navbar-default">
+    <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
+
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" style="color: black">Smart Compare</a>
+                <a class="navbar-brand" style="color:#727272">Smart Compare</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a href="#home" class="shadow" style="color: black" onclick="return ChangeVisibility('home','compare','selection','filter')">Home</a></li>
+                    <li><a href="#home" class="shadow" style="color:#727272" onclick="return ChangeVisibility('home','compare','selection','filter')">Home</a></li>
 
-                    <li><a href="#compare" class="shadow" style="color: black" onclick="return ChangeVisibility('filter','home','compare','selection')">Compare Phones</a></li>
+                    <li><a href="#compare" class="shadow" style="color:#727272" onclick="return ChangeVisibility('filter','home','compare','selection')">Compare Phones</a></li>
                 </ul>
             </div><!--/.nav-collapse -->
         </div>
@@ -101,7 +103,7 @@
     </dl>
 
     <div>
-        <select ng-model="priceLmt" ng-options="(x + '$') for x in priceLimit">
+        <select ng-model="priceLmt" ng-options="('up to '+ x + '$') for x in priceLimit">
             <option disabled checked value=""> Select Price Limit</option>
         </select>
     </div>
@@ -122,6 +124,7 @@
         </span>
     </div>
     <div id="drop_downs">
+
         <select class="select1" ng-model="first_selected_Item" ng-change="setChoice(0)" ng-options="x.Name for x in DevicesToShow">
             <option   value="" disabled selected > Select a device </option>
             <option > </option>
@@ -245,6 +248,7 @@
 <script src="js/jquery.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/bootstrap-select.min.js"></script>
+<script src="js/select.js"></script>
 <!--
 <script src="js/ui-bootstrap-tpls-0.11.2.js"></script>
 -->
