--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a href="#home" class="shadow" style="color:#727272" onclick="return ChangeVisibility('home','compare','selection','filter')">Home</a></li>
+                    <li><a href="#home" class="shadow"  onclick="return ChangeVisibility('home','compare','selection','filter')">Home</a></li>
 
-                    <li><a href="#compare" class="shadow" style="color:#727272" onclick="return ChangeVisibility('filter','home','compare','selection')">Compare Phones</a></li>
+                    <li><a href="#compare" class="shadow" onclick="return ChangeVisibility('filter','home','compare','selection')">Compare Phones</a></li>
                 </ul>
             </div><!--/.nav-collapse -->
         </div>
@@ -83,7 +83,7 @@
     <dl class="dropdown">
         <dt>
             <a href="#">
-                <span class="hida">Select Manufacture</span>
+                <span class="hida">Select Manufactures</span>
                 <p class="multiSel"></p>
             </a>
         </dt>
