price range up to 900 all manufactures option added

--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
                             {{x.Name}}
                         </label>
                     </li>
+                    <span ng-if="isAllManufactures()">
                 </ul>
             </div>
         </dd>
