--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0 , user-scalable=yes">
     <meta name="mobile-web-app-capable" content="yes">
-    <title>Smart Compare - tbk & ys</title>
+    <title>Smart Compare</title>
 
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="style/bootstrap.min.css">
@@ -35,9 +35,11 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a href="#home" class="shadow"  onclick="return ChangeVisibility('home','compare','selection','filter')">Home</a></li>
+                    <li><a href="#home" class="shadow"  onclick="return ChangeVisibility('home','compare','selection','filter','tops')">Home</a></li>
 
-                    <li><a href="#compare" class="shadow" onclick="return ChangeVisibility('filter','home','compare','selection')">Compare Phones</a></li>
+                    <li><a href="#compare" class="shadow" onclick="return ChangeVisibility('filter','home','compare','selection','tops')">Compare Phones</a></li>
+                    <li><a href="#tops" class="shadow" onclick="return ChangeVisibility('tops','filter','compare','selection','home')">Top of Categories</a></li>
+                    <a class="navbar-brand" style="color:#727272">This is a BETA version 2015 (c)</a>
                 </ul>
             </div><!--/.nav-collapse -->
         </div>
@@ -69,6 +71,15 @@
             </div>
         </div>
     </div>
+
+</div>
+
+
+<!--  tops of categories-->
+<div class="container" id="tops">
+    <br>
+<a style="font-size:100px">Under Construction</a>
+
 
 
 
